--- a/home.html
+++ b/home.html
@@ -1,52 +1,23 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hitta's Site</title>
+  <title>Key System</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Contenu principal -->
-  <header>
-    <nav>
-      <div class="logo">Hitta's Site</div>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Scripts</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="background"></div>
 
   <main>
-    <h1 class="main-title">Latest The Strongest Battlegrounds Scripts</h1>
-    <section class="search-bar">
-      <input type="text" placeholder="Search scripts...">
-      <button>Search</button>
-    </section>
-
-    <!-- La section des scripts -->
-
-
-   <section class="latest-scripts">
-      <h2>Latest Roblox Scripts</h2>
-      <div class="script-card">
-        <h2>Script 1</h2>
-      </div>
-      <div class="script-card">
-        <h2>Script 2</h2>
-      </div>
-      <div class="script-card">
-        <h2>Script 3</h2>
-      </div>
-      <div class="script-card">
-        <h2>Script 4</h2>
+    <section class="key-system-container">
+      <div class="key-box">
+        <h2 class="key-title">Key Generator</h2>
+        <button class="key-button" onclick="window.location.href='https://link-center.net/1227408/fischscript-keyless-hubs'">Get the Key</button>
       </div>
     </section>
   </main>
 
-  <footer>
-    <p>© 2025 Hitta's Site. All rights reserved.</p>
-  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
